--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <p><i>"Ice Cream yang rasanya beraneka ragam dengan tempat santai yang cocok untuk kumpul bersama teman-teman dan keluarga, harga yang ramah dan selalu ada promo setiap harinya"</i></p>
       <p>Owner: Ms. Aya</p>
     </div>
-    <img src="" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="z2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Buka:</strong> setiap hari, 09.00 - 20.00.</p>
     <p><strong>Address:</strong> Ruko Archives no.218, Jl.Artheri Galuh Mas, Karawang.</p>
   </div>
