--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
   <p>This website was made with W3schools Spaces. Make your own free website today!</p>
-  <a class="w3-button w3-round-xxlarge w3-dark-grey w3-margin-bottom" href="https://www.w3schools.com/spaces" target="_blank">Start now</a>
+  <a class="w3-button w3-round-xxlarge w3-dark-grey w3-margin-bottom" href="https://zahraayaa.github.io/ayaaa/#">Start now</a>
  <!-- Footer end. -->
  </footer>
 
